--- a/docs/集合相关源码学习.md
+++ b/docs/集合相关源码学习.md
@@ -23,8 +23,7 @@
 
 #### 三种初始化办法
 
-1. 无参数直接初始化
-   1. ArrayList 无参构造器初始化时，默认大小是空数组，并不是大家常说的 10，10 是在第一次 add 的时候扩容的数组值
+1. 无参数直接初始化，ArrayList 无参构造器初始化时，默认大小是空数组，并不是大家常说的 10，10 是在第一次 add 的时候扩容的数组值
 2. 指定大小初始化
 3. 指定初始数据初始化
 
