--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -1,3 +1,7 @@
+# 目录
+
+
+
 # 单例模式
 
 ### 饿汉式(静态代码常量)
@@ -921,15 +925,15 @@ public class HouseDirector {
 
 ##### StringBuilder类
 
-![StringBuilder](/Users/jiangcheng/blog/source/_posts/设计模式/StringBuilder.png)
+![StringBuilder.png](https://github.com/aisjca/Java-Notes/blob/master/%E5%9B%BE%E7%89%87/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/StringBuilder.png?raw=true)
 
 ##### AbstractStringBuilder类
 
-![AbstractStringBuilder](/Users/jiangcheng/blog/source/_posts/设计模式/AbstractStringBuilder.png)
+![AbstractStringBuilder.png](https://github.com/aisjca/Java-Notes/blob/master/%E5%9B%BE%E7%89%87/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/AbstractStringBuilder.png?raw=true)
 
 ##### Appendable类
 
-![Appendable](/Users/jiangcheng/blog/source/_posts/设计模式/Appendable.png)
+![Appendable.png](https://github.com/aisjca/Java-Notes/blob/master/%E5%9B%BE%E7%89%87/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/Appendable.png?raw=true)
 
 主要也是用建造者模式，Appendable接口定义了多个append方法，即Appendable为抽象建造者定义了抽象方法。
 
@@ -1356,7 +1360,7 @@ public class Department extends OrganizationComponent {
 
 ### HashMap
 
-![HashMap](/Users/jiangcheng/blog/source/_posts/设计模式/HashMap.png)
+![HashMap.png](https://github.com/aisjca/Java-Notes/blob/master/%E5%9B%BE%E7%89%87/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/HashMap.png?raw=true)
 
 1 HashMap也是运用了组合模式。
 
