--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -1,5 +1,11 @@
 # 目录
 
+[单例模式](https://github.com/aisjca/Java-Notes/blob/master/docs/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md#%E5%8D%95%E4%BE%8B%E6%A8%A1%E5%BC%8F)
+
+[策略模式](https://github.com/aisjca/Java-Notes/blob/master/docs/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md#%E7%AD%96%E7%95%A5%E6%A8%A1%E5%BC%8F)
+
+[原型模式](https://github.com/aisjca/Java-Notes/blob/master/docs/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md#%E5%8E%9F%E5%9E%8B%E6%A8%A1%E5%BC%8F)
+
 
 
 # 单例模式
@@ -559,7 +565,7 @@ public class Sheep implements Cloneable {
 
 运行结果
 
-![浅拷贝](/Users/jiangcheng/blog/source/_posts/设计模式/浅拷贝.png)
+![浅拷贝.png](https://github.com/aisjca/Java-Notes/blob/master/%E5%9B%BE%E7%89%87/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/%E6%B5%85%E6%8B%B7%E8%B4%9D.png?raw=true)
 
 1 可以发现，克隆出来的hashCode不相同，他们不是同一个对象，但是他们的friend却是指向同一个对象。证明浅拷贝对于数据类型是**基本数据类型**的成员变量，浅拷贝会直接进行值传递，也就是将该属性复制一份给新的对象。
 
@@ -653,11 +659,9 @@ public class DeepProtoType implements Serializable, Cloneable {
 
 **运行结果**
 
-![深拷贝1](/Users/jiangcheng/blog/source/_posts/设计模式/深拷贝1.png)
+![深拷贝1.png](https://github.com/aisjca/Java-Notes/blob/master/%E5%9B%BE%E7%89%87/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/%E6%B7%B1%E6%8B%B7%E8%B4%9D1.png?raw=true)
 
 两者hasdCode不一样
-
-
 
 ###### 通过对象序列化实现深拷贝
 
@@ -750,7 +754,7 @@ public class DeepProtoType implements Serializable, Cloneable {
 
 **运行结果**
 
-![深拷贝2](/Users/jiangcheng/blog/source/_posts/设计模式/深拷贝2.png)
+![深拷贝2.png](https://github.com/aisjca/Java-Notes/blob/master/%E5%9B%BE%E7%89%87/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/%E6%B7%B1%E6%8B%B7%E8%B4%9D2.png?raw=true)
 
 两者hasdCode不一样
 
