--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -6,7 +6,19 @@
 
 [原型模式](https://github.com/aisjca/Java-Notes/blob/master/docs/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md#%E5%8E%9F%E5%9E%8B%E6%A8%A1%E5%BC%8F)
 
+[建造者模式](https://github.com/aisjca/Java-Notes/blob/master/docs/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md#%E5%BB%BA%E9%80%A0%E8%80%85%E6%A8%A1%E5%BC%8F)
 
+[适配器模式](https://github.com/aisjca/Java-Notes/blob/master/docs/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md#%E9%80%82%E9%85%8D%E5%99%A8%E6%A8%A1%E5%BC%8F)
+
+[代理模式](https://github.com/aisjca/Java-Notes/blob/master/docs/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md#%E4%BB%A3%E7%90%86%E6%A8%A1%E5%BC%8F)
+
+[桥接模式](https://github.com/aisjca/Java-Notes/blob/master/docs/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md#%E6%A1%A5%E6%8E%A5%E6%A8%A1%E5%BC%8F)
+
+[装饰者模式](https://github.com/aisjca/Java-Notes/blob/master/docs/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md#%E8%A3%85%E9%A5%B0%E8%80%85%E6%A8%A1%E5%BC%8F)
+
+[组合模式](https://github.com/aisjca/Java-Notes/blob/master/docs/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md#%E7%BB%84%E5%90%88%E6%A8%A1%E5%BC%8F)
+
+[工厂模式](https://github.com/aisjca/Java-Notes/blob/master/docs/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md#%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F)
 
 # 单例模式
 
@@ -1153,7 +1165,7 @@ public class XiaoMi implements Brand {
 
 ### Jdbc源码
 
-![jdbc](/Users/jiangcheng/blog/source/_posts/设计模式/jdbc.png)
+![jdbc.png](https://github.com/aisjca/Java-Notes/blob/master/%E5%9B%BE%E7%89%87/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/jdbc.png?raw=true)
 
 这个方法也是用了桥接模式，而DriverManager是桥接类。
 
