--- a/docs/集合相关源码学习.md
+++ b/docs/集合相关源码学习.md
@@ -3,6 +3,8 @@
 * [ArrayList](https://github.com/aisjca/Java-Notes/blob/master/docs/集合相关源码学习.md#ArrayList)
 * [LinkedList](https://github.com/aisjca/Java-Notes/blob/master/docs/集合相关源码学习.md#LinkedList)
 * [HashMap](https://github.com/aisjca/Java-Notes/blob/master/docs/集合相关源码学习.md#HashMap)
+* [List源码常见问题](https://github.com/aisjca/Java-Notes/blob/master/docs/集合相关源码学习.md#List源码常见问题)
+* [Map源码常见问题](https://github.com/aisjca/Java-Notes/blob/master/docs/集合相关源码学习.md#Map源码常见问题)
 
 # ArrayList
 
@@ -207,7 +209,95 @@ Node<E> node(int index) {
 | 从尾到头迭代方法 | hasPrevious、previous、previousIndex |
 | 从头到尾迭代方法 | hasNext、next、nextIndex             |
 
+# List源码常见问题
 
+### 扩容类问题
+
+* **ArrayList 无参数构造器构造，现在 add 一个值进去，此时数组的大小是多少，下一次扩容前最大可用大小是多少？**
+
+此处数组的大小是 1，下一次扩容前最大可用大小是 10，因为 ArrayList 第一次扩容时，是有默认值的，默认值是 10，在第一次 add 一个值进去时，数组的可用大小被扩容到 10 了
+
+* **如果我连续往 list 里面新增值，增加到第 11 个的时候，数组的大小是多少**
+
+当增加到 11 的时候，此时我们希望数组的大小为 11，但实际上数组的最大容量只有 10，不够了就需要扩容，扩容的公式是：oldCapacity + (oldCapacity>> 1)，oldCapacity 表示数组现有大小，目前场景计算公式是：10 + 10 ／2 = 15，然后我们发现 15 已经够用了，所以数组的大小会被扩容到 15
+
+* **数组初始化，被加入一个值后，如果我使用 addAll 方法，一下子加入 15 个值，那么最终数组的大小是多少？**
+
+  第一题中我们已经计算出来数组在加入一个值后，实际大小是 1，最大可用大小是 10 ，现在需要一下子加入 15 个值，那我们期望数组的大小值就是 16，此时数组最大可用大小只有 10，明显不够，需要扩容，扩容后的大小是：10 + 10 ／2 = 15，这时候发现扩容后的大小仍然不到我们期望的值 16，这时候源码中有一种策略如下，所以最终数组扩容后的大小为 16。
+
+  ```java
+  // newCapacity 本次扩容的大小，minCapacity 我们期望的数组最小大小
+  // 如果扩容后的值 < 我们的期望值，我们的期望值就等于本次扩容的大小
+  if (newCapacity - minCapacity < 0)
+      newCapacity = minCapacity;
+  ```
+
+* **现在我有一个很大的数组需要拷贝，原数组大小是 5k，请问如何快速拷贝？**
+
+  因为原数组比较大，如果新建新数组的时候，不指定数组大小的话，就会频繁扩容，频繁扩容就会有大量拷贝的工作，造成拷贝的性能低下，所以回答说新建数组时，指定新数组的大小为 5k 即可。
+
+  
+
+* **为什么说扩容会消耗性能**
+
+  扩容底层使用的是 System.arraycopy 方法，会把原数组的数据全部拷贝到新数组上，所以性能消耗比较严重。
+
+### 删除类问题
+
+* **有一个 ArrayList，数据是 2、3、3、3、4，中间有三个 3，现在我通过 for (int i=0;i<list.size ();i++) 的方式，想把值是 3 的元素删除，请问可以删除干净么？最终删除的结果是什么，为什么？删除代码如下**
+
+  ```java
+  List<String> list = new ArrayList<String>() {{
+    add("2");
+    add("3");
+    add("3");
+    add("3");
+    add("4");
+  }};
+  for (int i = 0; i < list.size(); i++) {
+    if (list.get(i).equals("3")) {
+      list.remove(i);
+    }
+  }
+  ```
+
+  不能删除干净，最终删除的结果是 2、3、4，有一个 3 删除不掉，因为每次删除一个元素后，该元素后面的元素就会往前移动，而此时循环的 i 在不断地增长，最终会使每次删除 3 的后一个 3 被遗漏，导致删除不掉。
+
+* **还是上面的 ArrayList 数组，我们通过增强 for 循环进行删除，可以么**
+
+  不可以，会报错。因为增强 for 循环过程其实调用的就是迭代器的 next () 方法，当你调用 list#remove () 方法进行删除时，modCount 的值会 +1，而这时候迭代器中的 expectedModCount 的值却没有变，导致在迭代器下次执行 next () 方法时，expectedModCount != modCount 就会报 ConcurrentModificationException 的错误
+
+* **还是上面的数组，如果删除时使用 Iterator.remove () 方法可以删除么，为什么？**
+
+  可以的，因为 Iterator.remove () 方法在执行的过程中，会把最新的 modCount 赋值给 expectedModCount，这样在下次循环过程中，modCount 和 expectedModCount 两者就会相等。
+
+### 对比类问题
+
+* **ArrayList 和 LinkedList 有何不同**？
+
+  可以先从底层数据结构开始说起，然后以某一个方法为突破口深入，比如：最大的不同是两者底层的数据结构不同，ArrayList 底层是数组，LinkedList 底层是双向链表，两者的数据结构不同也导致了操作的 API 实现有所差异，拿新增实现来说，ArrayList 会先计算并决定是否扩容，然后把新增的数据直接赋值到数组上，而 LinkedList 仅仅只需要改变插入节点和其前后节点的指向位置关系即可
+
+* **ArrayList 和 LinkedList 应用场景有何不同**
+
+  ArrayList 更适合于快速的查找匹配，不适合频繁新增删除，像工作中经常会对元素进行匹配查询的场景比较合适，LinkedList 更适合于经常新增和删除，对查询反而很少的场景。
+
+* **ArrayList 和 LinkedList 两者有没有最大容量**
+
+  ArrayList 有最大容量的，为 Integer 的最大值，大于这个值 JVM 是不会为数组分配内存空间的，LinkedList 底层是双向链表，理论上可以无限大。但源码中，LinkedList 实际大小用的是 int 类型，这也说明了 LinkedList 不能超过 Integer 的最大值，不然会溢出
+
+* **ArrayList 和 LinkedList 是如何对 null 值进行处理的**
+
+  ArrayList 允许 null 值新增，也允许 null 值删除。删除 null 值时，是从头开始，找到第一值是 null 的元素删除；LinkedList 新增删除时对 null 值没有特殊校验，是允许新增和删除的。
+
+* **ArrayList 和 LinedList 是线程安全的么，为什么？**
+
+  当两者作为非共享变量时，比如说仅仅是在方法里面的局部变量时，是没有线程安全问题的，只有当两者是共享变量时，才会有线程安全问题。主要的问题点在于多线程环境下，所有线程任何时刻都可对数组和链表进行操作，这会导致值被覆盖，甚至混乱的情况。
+
+  如果有线程安全问题，在迭代的过程中，会频繁报 ConcurrentModificationException 的错误，意思是在我当前循环的过程中，数组或链表的结构被其它线程修改了。
+
+* **如何解决线程安全问题？**
+
+  Java 源码中推荐使用 Collections#synchronizedList 进行解决，Collections#synchronizedList 的返回值是 List 的每个方法都加了 synchronized 锁，保证了在同一时刻，数组和链表只会被一个线程所修改，或者采用 CopyOnWriteArrayList 并发 List 来解决。
 
 # HashMap
 
@@ -324,3 +414,109 @@ HashMap 底层的数据结构主要是：数组 + 链表 + 红黑树。其中当
 3. 分别走链表和红黑树不同类型的查找方法。
 
 * 如果红黑树是平衡的，一般查找时间复杂度就是树的深度
+
+# Map源码常见问题
+
+## Map 整体数据结构类问题
+
+* **HashMap 底层数据结构**
+
+  HashMap 底层是数组 + 链表 + 红黑树的数据结构，数组的主要作用是方便快速查找，时间复杂度是 O(1)，默认大小是 16，数组的下标索引是通过 key 的 hashcode 计算出来的，数组元素叫做 Node，当多个 key 的 hashcode 一致，但 key 值不同时，单个 Node 就会转化成链表，链表的查询复杂度是 O(n)，当链表的长度大于等于 8 并且数组的大小超过 64 时，链表就会转化成红黑树，红黑树的查询复杂度是 O(log(n))，简单来说，最坏的查询次数相当于红黑树的最大深度。
+
+* **HashMap、TreeMap、LinkedHashMap 三者有啥相同点，有啥不同点**
+
+  相同点：
+
+  1. 三者在特定的情况下，都会使用红黑树；
+  2. 底层的 hash 算法相同；
+  3. 在迭代的过程中，如果 Map 的数据结构被改动，都会报 ConcurrentModificationException 的错误。
+
+  不同点：
+
+  1. HashMap 数据结构以数组为主，查询非常快，TreeMap 数据结构以红黑树为主，利用了红黑树左小右大的特点，可以实现 key 的排序，LinkedHashMap 在 HashMap 的基础上增加了链表的结构，实现了插入顺序访问和最少访问删除两种策略;
+  2. 由于三种 Map 底层数据结构的差别，导致了三者的使用场景的不同，TreeMap 适合需要根据 key 进行排序的场景，LinkedHashMap 适合按照插入顺序访问，或需要删除最少访问元素的场景，剩余场景我们使用 HashMap 即可，我们工作中大部分场景基本都在使用 HashMap；
+  3. 由于三种 map 的底层数据结构的不同，导致上层包装的 api 略有差别。
+
+* **Map 的 hash 算法**
+
+```java
+static final int hash(Object key) {
+    int h;
+    return (key == null) ? 0 : (h = key.hashCode()) ^ (h >>> 16);
+}
+key 在数组中的位置公式：tab[(n - 1) & hash]
+```
+
+hash 算法其实是一个数学问题，源码中就是通过以上代码来计算 hash 的，首先计算出 key 的 hashcode，因为 key 是 Object，所以会根据 key 的不同类型进行 hashcode 的计算，接着计算 h ^ (h >>> 16) ，这么做的好处是使大多数场景下，算出来的 hash 值比较分散。
+
+一般来说，hash 值算出来之后，要计算当前 key 在数组中的索引下标位置时，可以采用取模的方式，就是索引下标位置 = hash 值 % 数组大小，这样做的好处，就是可以保证计算出来的索引下标值可以均匀的分布在数组的各个索引位置上，但取模操作对于处理器的计算是比较慢的，数学上有个公式，当 b 是 2 的幂次方时，a % b = a &（b-1），所以此处索引位置的计算公式我们可以更换为： (n-1) & hash。
+
+* **为什么不用 key % 数组大小，而是需要用 key 的 hash 值 % 数组大小。**
+
+如果 key 是数字，直接用 key % 数组大小是完全没有问题的，但我们的 key 还有可能是字符串，是复杂对象，这时候用 字符串或复杂对象 % 数组大小是不行的，所以需要先计算出 key 的 hash 值
+
+* **计算 hash 值时，为什么需要右移 16 位？**
+
+hash 算法是 h ^ (h >>> 16)，为了使计算出的 hash 值更分散，所以选择先将 h 无符号右移 16 位，然后再于 h 异或时，就能达到 h 的高 16 位和低 16 位都能参与计算，减少了碰撞的可能性。
+
+* **为什么把取模操作换成了 & 操作？**
+
+key.hashCode() 算出来的 hash 值还不是数组的索引下标，为了随机的计算出索引的下表位置，我们还会用 hash 值和数组大小进行取模，这样子计算出来的索引下标比较均匀分布。
+
+取模操作处理器计算比较慢，处理器对 & 操作就比较擅长，换成了 & 操作，是有数学上证明的支撑，为了提高了处理器处理的速度。
+
+* **为什么提倡数组大小是 2 的幂次方？**
+
+因为只有大小是 2 的幂次方时，才能使 hash 值 % n(数组大小) == (n-1) & hash 公式成立。
+
+* 怎么解诀hash冲突
+
+1. 使用 hash 算法，(h = key.hashCode()) ^ (h >>> 16)求哈希值;
+2. 自动扩容，当数组大小快满的时候，采取自动扩容，可以减少 hash 冲突;
+3. hash 冲突发生时，采用链表来解决;
+4. hash 冲突严重时，链表会自动转化成红黑树，提高遍历速度。
+
+## HashMap 源码细节类问题
+
+* **HashMap 是如何扩容的？**
+
+扩容的时机
+
+1. put 时，发现数组为空，进行初始化扩容，默认扩容大小为 16;
+2. put 成功后，发现现有数组大小大于扩容的门阀值时，进行扩容，扩容为老数组大小的 2 倍;
+
+扩容条件
+
+1. 扩容的门阀是 threshold，每次扩容时 threshold 都会被重新计算，门阀值等于数组的大小 * 影响因子（0.75）。当超过门阀值便会扩容
+
+* **hash 冲突解决方法**
+
+  hash 冲突指的是 key 值的 hashcode 计算相同，但 key 值不同的情况。如果桶中元素原本只有一个或已经是链表了，新增元素直接追加到链表尾部；如果桶中元素已经是链表，并且链表个数大于等于 8 时，此时有两种情况：
+
+  1. 如果此时数组大小小于 64，数组再次扩容，链表不会转化成红黑树。
+  2. 如果数组大小大于 64 时，链表就会转化成红黑树。
+
+  * 不仅仅判断链表个数大于等于 8，还判断了数组大小，数组容量小于 64 没有立即转化的原因，主要是因为红黑树占用的空间比链表大很多，转化也比较耗时，所以数组容量小的情况下冲突严重，可以先尝试扩容，看看能否通过扩容来解决冲突的问题。
+
+* **为什么链表个数大于等于 8 时，链表要转化成红黑树了？**
+
+  当链表个数太多了，遍历可能比较耗时，时间复杂度O(n)，转化成红黑树，可以使遍历的时间复杂度降低，但转化成红黑树，有空间和转化耗时的成本，但是正常情况下，根据柏松分布链表个数出现 8 的概念不到千万分之一，所以说正常情况下，链表都不会转化成红黑树，这样设计的目的，是为了防止非正常情况下，比如 hash 算法出了问题时，导致链表个数轻易大于等于 8 时，仍然能够快速遍历，时间复杂度为O(logn)。
+
+* **红黑树什么时候变成链表**
+
+  当节点的个数小于等于 6 时，红黑树会自动转化成链表，主要还是考虑红黑树的空间成本问题，当节点个数小于等于 6 时，遍历链表也很快，所以红黑树会重新变成链表。
+
+* **HashMap 在 put 时，如果数组中已经有了这个 key，但是不想把 value 覆盖怎么办？取值时，如果得到的 value 是空时，想返回默认值怎么办？**
+
+1. 如果数组有了 key，但不想覆盖 value ，可以选择 putIfAbsent 方法，这个方法有个内置变量 onlyIfAbsent，内置是 true ，就不会覆盖，我们平时使用的 put 方法，内置 onlyIfAbsent 为 false，是允许覆盖的。
+2. 取值时，如果为空，想返回默认值，可以使用 getOrDefault 方法，方法第一参数为 key，第二个参数为你想返回的默认值，如 map.getOrDefault(“2”,“0”)，当 map 中没有 key 为 2 的值时，会默认返回 0，而不是空。
+
+## 其它 Map 相关问题
+
+* **LinkedHashMap 中的 LRU 是如何实现的。**
+
+  LRU ，英文全称：Least recently used，中文叫做最近最少访问，在 LinkedHashMap 中，也叫做最少访问删除策略，可以通过 removeEldestEntry 方法设定一定的策略，使最少被访问的元素，在适当的时机被删除，原理是在 put 方法执行的最后，LinkedHashMap 会去检查这种策略，如果满足策略，就删除头节点，保证头节点就是最少访问的元素的原理是：**LinkedHashMap 在 get 的时候，都会把当前访问的节点，移动到链表的尾部，慢慢的，就会使头部的节点都是最少被访问的元素**。
+
+* **为什么 TreeMap 的元素最好都实现 Comparable 接口，但 key 是 String 的时候，我们却没有额外的工作呢？**
+
+  因为 TreeMap 的底层就是通过排序来比较两个 key 的大小的，所以推荐 key 实现 Comparable 接口，是为了往你希望的排序顺序上发展， 而 String 本身已经实现了 Comparable 接口，所以使用 String 时，我们不需要额外的工作，不仅仅是 String ，其他包装类型也都实现了 Comparable 接口，如 Long、Double、Short 等等。
