--- a/docs/线程.md
+++ b/docs/线程.md
@@ -1,6 +1,12 @@
 # 目录
 
-
+* [Thread的特性](https://github.com/aisjca/Java-Notes/blob/master/docs/%E7%BA%BF%E7%A8%8B.md#thread%E7%9A%84%E5%88%9D%E5%A7%8B%E5%8C%96)
+* [Thread的初始化](https://github.com/aisjca/Java-Notes/blob/master/docs/%E7%BA%BF%E7%A8%8B.md#thread%E7%9A%84%E5%88%9D%E5%A7%8B%E5%8C%96)
+* [start源码和run源码](https://github.com/aisjca/Java-Notes/blob/master/docs/%E7%BA%BF%E7%A8%8B.md#start%E6%BA%90%E7%A0%81%E5%92%8Crun%E6%BA%90%E7%A0%81)
+* [Thread运行的状态图](https://github.com/aisjca/Java-Notes/blob/master/docs/%E7%BA%BF%E7%A8%8B.md#thread%E8%BF%90%E8%A1%8C%E7%9A%84%E7%8A%B6%E6%80%81%E5%9B%BE)
+* [守护线程](https://github.com/aisjca/Java-Notes/blob/master/docs/%E7%BA%BF%E7%A8%8B.md#%E5%AE%88%E6%8A%A4%E7%BA%BF%E7%A8%8B)
+* [Thread初始化](https://github.com/aisjca/Java-Notes/blob/master/docs/%E7%BA%BF%E7%A8%8B.md#thread%E5%88%9D%E5%A7%8B%E5%8C%96)
+* [Thread常用方法](https://github.com/aisjca/Java-Notes/blob/master/docs/%E7%BA%BF%E7%A8%8B.md#thread%E5%B8%B8%E7%94%A8%E6%96%B9%E6%B3%95)
 
 # Thread的特性
 
@@ -109,7 +115,7 @@
 
 # Thread运行的状态图
 
-![线程执行流程图](/Users/jiangcheng/Java-Notes/图片/线程/线程执行流程图.png)
+![线程执行流程图.png](https://github.com/aisjca/Java-Notes/blob/master/%E5%9B%BE%E7%89%87/%E7%BA%BF%E7%A8%8B/%E7%BA%BF%E7%A8%8B%E6%89%A7%E8%A1%8C%E6%B5%81%E7%A8%8B%E5%9B%BE.png?raw=true)
 
 1. NEW 表示线程创建成功，但没有运行，在 new Thread 之后，没有 start 之前，线程的状态都是 NEW；
 2. 当我们运行 strat 方法，子线程被创建成功之后，子线程的状态变成 RUNNABLE，RUNNABLE 表示线程正在运行中；
