--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -1390,6 +1390,74 @@ public class Department extends OrganizationComponent {
 
 # 模板模式
 
+模版方法里面包含基本方法和模版方法
+
+1. 基本方法：是抽象方法，由子类实现，并且在模板方法中被调用。
+2. 模板方法：可以有一个或者几个，一般是具体的方法，实现对基本方法的调度，完成确定的业务逻辑，确定一个框架。
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Dog dog = new Dog();
+        dog.start();
+
+        Cat cat = new Cat();
+        cat.start();
+    }
+}
+// 抽象的父类
+abstract class Animal{
+    // 定义抽象方法
+    abstract void eat();
+    abstract void run();
+
+    // 定义具体的模板方法
+    public void start(){
+        // 定义一个框架，确定方法的执行步骤
+        eat();
+        run();
+    }
+}
+// 定于子类
+class Dog extends Animal{
+    @Override
+    void eat() {
+        System.out.println("我是小狗，我在吃东西...");
+    }
+
+    @Override
+    void run() {
+        System.out.println("我是小狗，我在跑步...");
+    }
+}
+
+class Cat extends Animal{
+    @Override
+    void eat() {
+        washHand();
+        System.out.println("我是小猫，我在吃东西...");
+    }
+
+    @Override
+    void run() {
+        System.out.println("我是小猫，我在跑步...");
+    }
+
+    // 其余业务逻辑
+    private void washHand(){
+        System.out.println("我是小猫，我在洗手...");
+    }
+}
+```
+
+由代码可以看出，在不改变eat和run方法的执行顺序的前提下，Cat类通过在实现eat方法的加入其他的业务逻辑，来改变了eat这个特定的步骤。
+
+模版方法优点
+
+1. 封装不变部分，扩展可变部分
+2. 提取公共部分代码，便于维护
+3. 行为由父类控制，子类实现
+
 # 命令模式
 
 # 访问模式
